Переход на хранение в бд и большой рефакторинг