@@ -17,21 +17,23 @@ import ru.sparkcraft.eventhelper.activators.*;
 import ru.sparkcraft.eventhelper.activators.objects.*;
 
 import java.util.*;
-import java.util.stream.Collectors;
+import java.util.function.Supplier;
 import java.util.stream.Stream;
 
 public class Commands implements TabExecutor {
-    private final String[] COMMANDS = {"create", "add", "list", "delete", "clear", "remove", "select", "info", "execute"};
-    private final String[] META_SUB_COMMANDS = {"set", "unset", "plus", "minus"};
+
+    private final String[] COMMANDS = {"create", "add", "list", "delete", "clear", "remove", "select", "info", "execute", "reload"};
+    private final String[] META_SUB_COMMANDS = {"set", "unset"};
     private final EventHelper plugin;
     private final Map<CommandSender, Activator> selectedActivators = new HashMap<>();
 
     private static final String NOT_FOUND = "Активатор с таким именем не найден.";
     private static final String NOT_CAN = "Данный тип действия недоступен для этого типа активатора.";
-    private static final String CREATED = "Активатор создан под именем: ";
-    private static final String ALREADY_EXISTS = "Активатор с таким именем уже существует.";
+    private static final String ACTIVATOR_CREATED = "Активатор создан под именем: ";
+    private static final String FUNCTION_CREATED = "Функция создана под именем: ";
+    private static final String ACTIVATOR_ALREADY_EXISTS = "Активатор с таким именем уже существует.";
+    private static final String FUNCTION_ALREADY_EXISTS = "Функция с таким именем уже существует.";
     private static final String NEED_TO_SELECT = "Сначала выберите активатор.";
-
     private static final String NEED_TO_SELECT_OR_NAME = "Выберите активатор или укажите имя.";
     private static final String INVALID_ARGUMENTS = "Неверные аргументы команды.";
     private static final String NOT_ENOUGH_ARGUMENTS = "Недостаточно аргументов.";
@@ -42,7 +44,7 @@ public class Commands implements TabExecutor {
 
     @Override
     public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
-        if (sender instanceof Player && sender.hasPermission("e.commands")) {
+        if (sender.hasPermission("e.commands")) {
             if (args.length == 0) {
                 help(sender);
             } else {
@@ -56,30 +58,14 @@ public class Commands implements TabExecutor {
                     case "select" -> select(sender, args);
                     case "info" -> info(sender, args);
                     case "execute" -> execute(sender, args);
+                    case "reload" -> reload(sender);
                     default -> add(sender, args, 0);
                 }
             }
-            return false;
+            return true;
         }
         sender.sendMessage("У вас нет прав.");
         return false;
-    }
-
-    private void defaultCase(CommandSender sender, String @NotNull [] args) {
-        if (args.length == 2) {
-            if (isActivatorSelected(sender)) {
-                try {
-                    EventType eventType = EventType.valueOf(args[0].toUpperCase(Locale.ROOT));
-                    printEventProcessorInfo(sender, selectedActivators.get(sender).getEventProcessor(eventType));
-                } catch (IllegalArgumentException e) {
-                    sender.sendMessage(INVALID_ARGUMENTS);
-                }
-            } else {
-                sender.sendMessage(NEED_TO_SELECT_OR_NAME);
-            }
-        } else {
-            help(sender);
-        }
     }
 
     private void add(CommandSender sender, String @NotNull [] args, int index) {
@@ -87,7 +73,8 @@ public class Commands implements TabExecutor {
             Activator activator = selectedActivators.get(sender);
             EventType eventType = EventType.valueOf(args[index].toUpperCase(Locale.ROOT));
             ActionType actionType = ActionType.valueOf(args[index + 1].toUpperCase(Locale.ROOT));
-            boolean noArgumentsNeeded = actionType == ActionType.KILL || actionType == ActionType.HEALTH;
+            boolean noArgumentsNeeded = actionType == ActionType.KILL || actionType == ActionType.HEALTH ||
+                    actionType == ActionType.ELSE || actionType == ActionType.ENDIF;
 
             if (activator != null) {
 
@@ -174,9 +161,11 @@ public class Commands implements TabExecutor {
     }
 
     private void addAction(@NotNull Activator activator, EventType eventType, ActionType actionType, CommandSender sender, String value) {
-        if (activator.addEventProcessor(new EventProcessor(activator, eventType, plugin))) {
+        if (activator.addEventProcessor(eventType)) {
             activator.getEventProcessor(eventType).addAction(actionType, value);
-            sender.sendMessage("Добавлено действие " + actionType + " к событию " + eventType + " активатора " + activator.getName());
+            String message = "Добавлено действие " + actionType +
+                    (activator instanceof Function function ? " к функции " + function.getName() : " к событию " + eventType + " активатора " + activator.getName());
+            sender.sendMessage(message);
         } else {
             sender.sendMessage(NOT_CAN);
         }
@@ -199,9 +188,9 @@ public class Commands implements TabExecutor {
                 player.sendMessage("Данный тип блока не может быть активатором.");
             }
 
-        } else if (args.length == 3 && args[2].equalsIgnoreCase("EXECUTOR")) {
+        } else if (args.length == 3 && args[2].equalsIgnoreCase("FUNCTION")) {
             String activatorName = args[1];
-            createExecActivator(sender, activatorName);
+            createFunction(sender, activatorName);
 
         } else if (args.length == 4 && args[2].equalsIgnoreCase("REGION")) {
             String activatorName = args[1];
@@ -215,54 +204,58 @@ public class Commands implements TabExecutor {
 
     private void createActivator(@NotNull CommandSender sender, String activatorName, Location location, ActivatorType activatorType) {
         String owner = sender.getName();
-        if (Activator.getActivator(owner, activatorName) == null) {
-            sender.sendMessage(CREATED + activatorName);
-            switch (activatorType) {
-                case BUTTON -> selectActivator(sender, new Button(plugin, owner, activatorName, location));
-                case CHEST -> selectActivator(sender, new Chest(plugin, owner, activatorName, location));
-                case DOOR -> selectActivator(sender, new Door(plugin, owner, activatorName, location));
-                case LEVER -> selectActivator(sender, new Lever(plugin, owner, activatorName, location));
-                case PLATE -> selectActivator(sender, new Plate(plugin, owner, activatorName, location));
-                default -> throw new IllegalStateException("Unexpected value: " + activatorType);
-            }
-        } else {
-            sender.sendMessage(ALREADY_EXISTS);
+        if (checkAndCreateActivator(sender, owner, activatorName, () -> createActivatorByType(owner, activatorName, location, activatorType))) {
+            sender.sendMessage(ACTIVATOR_CREATED + activatorName);
         }
     }
 
     private void createRegionActivator(@NotNull CommandSender sender, String activatorName, String regionName) {
         String owner = sender.getName();
-        if (Activator.getActivator(owner, activatorName) == null) {
-            sender.sendMessage(CREATED + activatorName);
-            selectActivator(sender, new Region(plugin, owner, activatorName, regionName));
-        } else {
-            sender.sendMessage(ALREADY_EXISTS);
+        if (checkAndCreateActivator(sender, owner, activatorName, () -> new Region(owner, activatorName, regionName))) {
+            sender.sendMessage(ACTIVATOR_CREATED + activatorName);
         }
     }
 
-    private void createExecActivator(@NotNull CommandSender sender, String activatorName) {
+    private void createFunction(@NotNull CommandSender sender, String functionName) {
         String owner = sender.getName();
-        if (Activator.getActivator(owner, activatorName) == null) {
-            sender.sendMessage(CREATED + activatorName);
-            selectActivator(sender, new Executor(plugin, owner, activatorName));
-        } else {
-            sender.sendMessage(ALREADY_EXISTS);
+        if (checkAndCreateActivator(sender, owner, functionName, () -> new Function(owner, functionName))) {
+            sender.sendMessage(FUNCTION_CREATED + functionName);
         }
+    }
+
+    private boolean checkAndCreateActivator(CommandSender sender, String owner, String name, Supplier<Activator> activatorSupplier) {
+        if (Activator.getActivator(owner, name) == null) {
+            Activator activator = activatorSupplier.get();
+            return ActivatorDAO.getInstance().saveActivator(activator);
+        } else {
+            sender.sendMessage(ACTIVATOR_ALREADY_EXISTS);
+            return false;
+        }
+    }
+
+    private @NotNull Activator createActivatorByType(String owner, String activatorName, Location location, @NotNull ActivatorType activatorType) {
+        return switch (activatorType) {
+            case BUTTON -> new Button(owner, activatorName, location);
+            case CHEST -> new Chest(owner, activatorName, location);
+            case DOOR -> new Door(owner, activatorName, location);
+            case LEVER -> new Lever(owner, activatorName, location);
+            case PLATE -> new Plate(owner, activatorName, location);
+            default -> throw new IllegalStateException("Unexpected value: " + activatorType);
+        };
     }
 
     private void list(CommandSender sender) {
         int index = 0;
         try {
             if (!Activator.getActivators(sender.getName()).isEmpty()) {
-                sender.sendMessage("Список активаторов: ");
                 for (Activator activator : Activator.getActivators(sender.getName())) {
-                    sender.sendMessage(" - " + (index++) + ". " + activator.getName());
+                    sender.sendMessage(" - " + (index++) + ". " + activator.getName() + " (" + activator.getType() + ")");
                 }
             } else {
-                sender.sendMessage("Список активаторов пуст.");
+                sender.sendMessage("Список пуст.");
             }
         } catch (NullPointerException e) {
-            sender.sendMessage("Список активаторов пуст.");
+            sender.sendMessage("Список пуст.");
         }
     }
 
@@ -276,7 +269,7 @@ public class Commands implements TabExecutor {
                     EventProcessor eventProcessor = activator.getEventProcessor(eventType);
                     if (eventProcessor != null) {
                         eventProcessor.deleteAction(index);
-                        sender.sendMessage("Действие под индексом " + index + " успешно удалено в активаторе " + activator.getName());
+                        sender.sendMessage("Действие под индексом " + index + " успешно удалено в " + activator.getName());
                     }
                 } catch (IndexOutOfBoundsException e) {
                     sender.sendMessage("Индекс выходит за диапазон значений.");
@@ -291,7 +284,7 @@ public class Commands implements TabExecutor {
 
     private void remove(CommandSender sender, String @NotNull [] args) {
         if (args.length == 2) {
-            if (Activator.removeActivator(plugin, sender.getName(), args[1])) {
+            if (Activator.removeActivator(sender.getName(), args[1])) {
                 sender.sendMessage("Активатор успешно удален.");
             } else {
                 sender.sendMessage(NOT_FOUND);
@@ -300,22 +293,29 @@ public class Commands implements TabExecutor {
     }
 
     private void clear(CommandSender sender, String @NotNull [] args) {
-        if (args.length == 2) {
-            Activator activator = selectedActivators.get(sender);
-            if (activator != null) {
+        Activator activator = selectedActivators.get(sender);
+        if (activator != null) {
+            if (args.length == 1 && activator instanceof Function) {
+                if (activator.removeEventProcessor(EventType.RUN)) {
+                    sender.sendMessage("Функция очищена.");
+                } else {
+                    sender.sendMessage("Не удалось очистить функцию.");
+                }
+            }
+            if (args.length == 2) {
                 try {
                     EventType eventType = EventType.valueOf(args[1].toUpperCase(Locale.ROOT));
                     if (activator.removeEventProcessor(eventType)) {
                         sender.sendMessage("Указанный тип события удален.");
                     } else {
-                        sender.sendMessage("Указаный тип события не найден в активаторе.");
+                        sender.sendMessage("Указаный тип события не найден.");
                     }
                 } catch (IllegalArgumentException e) {
-                    sender.sendMessage("Указан неверный тип события активатора.");
+                    sender.sendMessage("Указан неверный тип события.");
                 }
-            } else {
-                sender.sendMessage(NEED_TO_SELECT);
             }
+        } else {
+            sender.sendMessage(NEED_TO_SELECT);
         }
     }
 
@@ -329,7 +329,11 @@ public class Commands implements TabExecutor {
     private void selectActivator(CommandSender sender, Activator activator) {
         if (activator != null) {
             selectedActivators.put(sender, activator);
-            sender.sendMessage("Активатор " + activator.getName() + " выбран для редактирования.");
+            if (activator instanceof Function function) {
+                sender.sendMessage("Функция " + function.getName() + " выбрана для редактирования.");
+            } else {
+                sender.sendMessage("Активатор " + activator.getName() + " выбран для редактирования.");
+            }
         } else {
             sender.sendMessage(NOT_FOUND);
         }
@@ -355,7 +359,7 @@ public class Commands implements TabExecutor {
 
     private void execute(CommandSender sender, String @NotNull [] args) {
         if (args.length == 3) {
-            Activator activator = Activator.getActivator(sender.getName(), args[1]);
+            Activator activator = Activator.getFunctionActivator(args[1]);
             if (activator != null) {
                 EventProcessor eventProcessor = activator.getEventProcessor(EventType.RUN);
                 if (eventProcessor != null) {
@@ -370,6 +374,11 @@ public class Commands implements TabExecutor {
         }
     }
 
+    private void reload(CommandSender sender) {
+        Activator.reloadActivators();
+        sender.sendMessage("Данные перезагружены!");
+    }
+
     private boolean isActivatorSelected(CommandSender sender) {
         Activator activator = selectedActivators.get(sender);
         return activator != null;
@@ -378,7 +387,7 @@ public class Commands implements TabExecutor {
     private void printActivatorInfo(CommandSender sender, @NotNull Activator activator) {
         if (!activator.getEventProcessors().isEmpty()) {
             sender.sendMessage("Активатор: " + activator.getName());
-            for (EventProcessor eventProcessor : activator.getEventProcessors()) {
+            for (EventProcessor eventProcessor : activator.getEventProcessors().values()) {
                 printEventProcessorInfo(sender, eventProcessor);
             }
         } else {
@@ -389,7 +398,7 @@ public class Commands implements TabExecutor {
     private void printEventProcessorInfo(@NotNull CommandSender sender, @NotNull EventProcessor eventProcessor) {
         sender.sendMessage(" " + eventProcessor.getEventType().name() + ":");
         int index = 0;
-        for (EventProcessor.Action action : eventProcessor.getActionsQueue()) {
+        for (Action action : eventProcessor.getActionsQueue()) {
             String result = action.getValue() == null ? action.getActionType().name() : action.getActionType().name() + ": " + action.getValue();
             sender.sendMessage("  - " + (index++) + ". " + result);
         }
@@ -404,86 +413,101 @@ public class Commands implements TabExecutor {
 
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String alias, @NotNull String[] args) {
-        final List<String> completions = new ArrayList<>();
-        switch (args.length) {
-            case 1 -> {
-                if (isActivatorSelected(sender)) {
-                    StringUtil.copyPartialMatches(args[0],
-                            Stream.of(EventType.values())
-                                    .map(EventType::name)
-                                    .collect(Collectors.toList()),
-                            completions);
-                }
-                StringUtil.copyPartialMatches(args[0], Arrays.asList(COMMANDS), completions);
-            }
-            case 2 -> {
-                switch (args[0]) {
-                    case "create":
-                        return Collections.singletonList("<имя активатора>");
+        if (sender.hasPermission("e.commands")) {
+            final List<String> completions = new ArrayList<>();
 
-                    case "clear", "add", "delete":
-                        StringUtil.copyPartialMatches(args[1],
-                                Arrays.stream(EventType.values())
+            switch (args.length) {
+                case 1 -> {
+                    if (isActivatorSelected(sender)) {
+                        StringUtil.copyPartialMatches(args[0],
+                                Stream.of(EventType.values())
                                         .map(EventType::name)
-                                        .collect(Collectors.toList()),
+                                        .toList(),
                                 completions);
-                        break;
+                    }
+                    StringUtil.copyPartialMatches(args[0], Arrays.asList(COMMANDS), completions);
+                }
+                case 2 -> {
+                    switch (args[0]) {
+                        case "create":
+                            return Collections.singletonList("<имя>");
 
-                    case "remove", "select", "info":
+                        case "clear", "add", "delete":
+                            StringUtil.copyPartialMatches(args[1],
+                                    Arrays.stream(EventType.values())
+                                            .map(EventType::name)
+                                            .toList(),
+                                    completions);
+                            break;
+
+                        case "remove", "select", "info":
+                            StringUtil.copyPartialMatches(args[1],
+                                    Activator.getActivators(sender.getName())
+                                            .stream()
+                                            .map(Activator::getName)
+                                            .toList(),
+                                    completions);
+                            break;
+
+                        default:
+                            break;
+                    }
+                    if (Arrays.stream(EventType.values())
+                            .map(EventType::name)
+                            .toList()
+                            .contains(args[0].toUpperCase()) && isActivatorSelected(sender)) {
                         StringUtil.copyPartialMatches(args[1],
-                                Activator.getActivators(sender.getName())
-                                        .stream()
-                                        .map(Activator::getName)
-                                        .collect(Collectors.toList()),
-                                completions);
-                        break;
-                }
-                if (Arrays.stream(EventType.values())
-                        .map(EventType::name)
-                        .toList()
-                        .contains(args[0]) && isActivatorSelected(sender)) {
-                    StringUtil.copyPartialMatches(args[1],
-                            Stream.of(ActionType.values())
-                                    .map(ActionType::name)
-                                    .collect(Collectors.toList()),
-                            completions);
-                }
-            }
-            case 3 -> {
-                switch (args[0]) {
-                    case "create":
-                        StringUtil.copyPartialMatches(args[2], Arrays.asList("REGION", "EXECUTOR"), completions);
-                        break;
-
-                    case "add":
-                        StringUtil.copyPartialMatches(args[2],
                                 Stream.of(ActionType.values())
                                         .map(ActionType::name)
-                                        .collect(Collectors.toList()),
+                                        .toList(),
                                 completions);
-                        break;
-
-                    case "delete":
-                        return Collections.singletonList("<индекс действия>");
-                }
-                if (args[1].equalsIgnoreCase("META")) {
-                    StringUtil.copyPartialMatches(args[2], Arrays.asList(META_SUB_COMMANDS), completions);
-                }
-            }
-            case 4 -> {
-                if (args[1].equalsIgnoreCase("META")) {
-                    if (args[2].equalsIgnoreCase("set")) {
-                        return Collections.singletonList("<ключ> <значение>");
-                    } else if (args[2].equalsIgnoreCase("unset")) {
-                        return Collections.singletonList("<ключ>");
                     }
                 }
-                if (args[2].equalsIgnoreCase("REGION")) {
-                    return Collections.singletonList("<название региона>");
+                case 3 -> {
+                    switch (args[0]) {
+                        case "create":
+                            StringUtil.copyPartialMatches(args[2], Arrays.asList("REGION", "FUNCTION"), completions);
+                            break;
+
+                        case "add":
+                            StringUtil.copyPartialMatches(args[2],
+                                    Stream.of(ActionType.values())
+                                            .map(ActionType::name)
+                                            .toList(),
+                                    completions);
+                            break;
+
+                        case "delete":
+                            return Collections.singletonList("<индекс действия>");
+
+                        default:
+                            break;
+                    }
+                    if (args[1].equalsIgnoreCase("META")) {
+                        StringUtil.copyPartialMatches(args[2], Arrays.asList(META_SUB_COMMANDS), completions);
+                    }
+                    if (args[1].equalsIgnoreCase("CONDITION")) {
+                        return Arrays.asList("условие ? команда1 : команда2", "условие ? команда");
+                    }
+                    if (args[1].equalsIgnoreCase("IF")) {
+                        return Collections.singletonList("условие");
+                    }
+                }
+                case 4 -> {
+                    if (args[1].equalsIgnoreCase("META")) {
+                        if (args[2].equalsIgnoreCase("set")) {
+                            return Collections.singletonList("<ключ> <значение>");
+                        } else if (args[2].equalsIgnoreCase("unset")) {
+                            return Collections.singletonList("<ключ>");
+                        }
+                    }
+                    if (args[2].equalsIgnoreCase("REGION")) {
+                        return Collections.singletonList("<название региона>");
+                    }
                 }
             }
+            return completions;
         }
-
-        return completions;
+        return null;
     }
 }
